// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Bottom Wizard Bar Default 1`] = `
.c0 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:760px) {
  .c0 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c1 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c1 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c7 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <a
          className="c3"
          href="https://nordnet.se/cancel"
          onClick={[Function]}
        >
          <span
            className="c4"
          >
            Cancel
          </span>
        </a>
      </div>
      <div
        className="c5"
      >
        <div
          className="c2"
        >
          <a
            className="c3"
            href="https://nordnet.se/previous"
            onClick={[Function]}
          >
            <span
              className="c4"
            >
              Previous
            </span>
          </a>
        </div>
        <div
          className="c2"
        >
          <a
            className="c6 c7"
            href="https://nordnet.se/next"
            onClick={[Function]}
          >
            <span>
              <span
                className="c4"
              >
                Next
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Last Step And Loading 1`] = `
.c0 {
  padding-left: 12px;
  padding-top: 8px;
  padding-right: 12px;
  padding-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:760px) {
  .c0 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c1 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c1 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c5 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c5 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c7 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c3"
          disabled={true}
          onClick={[Function]}
          type="reset"
        >
          <span
            className="c4"
          >
            Cancel
          </span>
        </button>
      </div>
      <div
        className="c5"
      >
        <div
          className="c2"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c3"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c4"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c2"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c6 c7"
            onClick={[Function]}
            type="submit"
          >
            <span>
              <span
                className="c4"
              >
                Submit
              </span>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Previous Button Disabled 1`] = `
.c0 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  background-color: hsl(223.5,100%,45%);
}

.c4:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:760px) {
  .c0 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c1 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c1 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c5 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c4 c5"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c6"
              >
                Next
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded 1`] = `
.c0 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:760px) {
  .c0 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c1 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c1 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c7 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c4"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c5"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="c5"
              >
                Next
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Molecules / Bottom Wizard Bar Webview Embedded Last Step And Loading 1`] = `
.c0 {
  padding-left: 16px;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 8px 16px;
  min-height: 40px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

@media (min-width:760px) {
  .c0 {
    padding-left: 0px;
    padding-top: 8px;
    padding-right: 0px;
    padding-bottom: 8px;
  }
}

@media (min-width:760px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
  }

  .c1 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c1 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-left: -16px;
    margin-right: -16px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c2 > * {
    padding-left: 16px;
    padding-right: 16px;
  }

  .c2 > *:not(:first-child) {
    padding-top: 0;
  }
}

@media (min-width:760px) {
  .c7 {
    min-width: 160px;
  }
}

<nav
  aria-label="Title"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c4"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c5"
            >
              Previous
            </span>
          </button>
        </div>
        <div
          className="c3"
        >
          <button
            className="NormalizedButton__Button-ey7f5x-0 c6 c7"
            onClick={[Function]}
            type="submit"
          >
            <span>
              <span
                className="c5"
              >
                Submit
              </span>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
